<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/calculator"
    android:backgroundTint="#E6F5DEDD"
    android:backgroundTintMode="screen"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/calculadora_imc"
        android:textColor="#000"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/tevMainNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tevMainNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/txv_bg"
        android:padding="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/nome"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/tevMainAltura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tevMainAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/txv_bg"
        android:padding="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/altura"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/tevMainPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tevMainNome" />

    <TextView
        android:id="@+id/tevMainPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/txv_bg"
        android:padding="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/kg"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/tevMainGenero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tevMainAltura" />

    <TextView
        android:id="@+id/tevMainGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/txv_bg"
        android:padding="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/g_nero"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/tevMainImc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tevMainPeso" />

    <TextView
        android:id="@+id/tevMainImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/txv_bg"
        android:padding="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/imc"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/tevMainFaixa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tevMainGenero" />

    <TextView
        android:id="@+id/tevMainFaixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/txv_bg"
        android:padding="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/faixa"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMainSair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tevMainImc" />

    <Button
        android:id="@+id/btnMainSair"
        android:layout_width="136dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_custon"
        android:onClick="OnClick"
        android:text="@string/sair"
        android:textColor="#fafafa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMainWeb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tevMainFaixa"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btnMainWeb"
        android:layout_width="136dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="45dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_custon"
        android:text="Ajuda"
        android:textColor="#fafafa"
        app:layout_constraintBottom_toBottomOf="@+id/btnMainSair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMainSair" />

</androidx.constraintlayout.widget.ConstraintLayout>